<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ffffff">

    <!-- If you want a background picture just do
    android:background="@folderlocation/nameOfFile"
    ^ put that in the relative layout portion
    -->

    <!-- If you want a regular picture anywhere in a specific activity
    just do use an imageview widget and you can put the sourcefile's path into
    the section of "src" in the imageview widget in the xml
    -->

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autoText="false"
        android:hint="Username"
        android:linksClickable="false"
        android:backgroundTintMode="src_in"
        android:singleLine="false"
        android:layout_marginTop="68dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="Password"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoginButton"
        android:layout_below="@+id/passwordText"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:text="@string/SignUpButton"
        android:textAllCaps="false"/>

    <ImageView
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:id="@+id/imageView"
        android:background="@mipmap/logo"
        android:layout_alignEnd="@+id/usernameText"
        android:layout_alignParentStart="true" />

</RelativeLayout>
